--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.9",
+    "@types/nodemailer": "^6.4.13",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "cron": "^3.1.5"
+    "cron": "^3.1.5",
+    "dotenv": "^16.3.1",
+    "env-var": "^7.4.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "nodemailer": "^6.9.7"
   }
 }
