--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,13 @@
 MAILER_SERVICE=gmail
 MAILER_EMAIL=
 MAILER_SECRET_KEY=
+
+MONGO_URL=
+MONGO_DB_NAME=
+MONGO_USER=
+MONGO_PASS=
+
+POSTGRES_URL=
+POSTGRES_DB_NAME=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
