--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "devDependencies": {
     "@types/node": "^20.8.9",
     "@types/nodemailer": "^6.4.13",
+    "prisma": "^5.5.2",
     "rimraf": "^5.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "cron": "^3.1.5",
     "dotenv": "^16.3.1",
     "env-var": "^7.4.1",
+    "mongoose": "^8.0.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "nodemailer": "^6.9.7"
   }
